[gd_scene load_steps=13 format=3 uid="uid://5qin1yt3l7sm"]

[ext_resource type="Texture2D" uid="uid://bnopfo6oir5ob" path="res://assets/balloon/1.png" id="1_3dm06"]
[ext_resource type="Script" path="res://scripts/balloon.gd" id="1_cjf5n"]
[ext_resource type="Texture2D" uid="uid://cc4uchu3k63dv" path="res://assets/balloon/2.png" id="2_e1v1o"]
[ext_resource type="Texture2D" uid="uid://37618hsmvmr6" path="res://assets/balloon/3.png" id="3_5ou3j"]
[ext_resource type="Texture2D" uid="uid://nu77pc42p1kv" path="res://assets/balloon/4.png" id="4_e0vi6"]
[ext_resource type="Texture2D" uid="uid://qittn310be66" path="res://assets/balloon/6.png" id="5_c4c56"]
[ext_resource type="Texture2D" uid="uid://6sg828pwqjp8" path="res://assets/balloon/5.png" id="6_y1n43"]
[ext_resource type="AudioStream" uid="uid://dow3g5lpyy7cf" path="res://assets/audio/balloon-pop.mp3" id="8_6o3m0"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_k0ie6"]
radius = 29.0
height = 78.0

[sub_resource type="Animation" id="Animation_lf2mt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_3dm06")]
}

[sub_resource type="Animation" id="Animation_2x7o2"]
resource_name = "balloon_pop"
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.02, 0.04, 0.06, 0.08, 0.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("1_3dm06"), ExtResource("2_e1v1o"), ExtResource("3_5ou3j"), ExtResource("4_e0vi6"), ExtResource("5_c4c56"), ExtResource("6_y1n43")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_q6b21"]
_data = {
"RESET": SubResource("Animation_lf2mt"),
"balloon_pop": SubResource("Animation_2x7o2")
}

[node name="Balloon" type="RigidBody2D" groups=["balloon"]]
gravity_scale = -1.0
contact_monitor = true
max_contacts_reported = 1
script = ExtResource("1_cjf5n")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.2, 0.2)
texture = ExtResource("1_3dm06")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -3)
shape = SubResource("CapsuleShape2D_k0ie6")

[node name="BalloonAnim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_q6b21")
}

[node name="BalloonPopAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_6o3m0")
volume_db = 5.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_shape_entered" from="." to="." method="_on_body_shape_entered"]
[connection signal="animation_finished" from="BalloonAnim" to="." method="_on_balloon_anim_animation_finished"]
